--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,15 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connectkit": "^1.7.3",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "shadcn-ui": "^0.9.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wagmi": "^2.12.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
